jmeter/docker/jmeter_grafana_deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: jmeter-grafana
  labels:
    app: jmeter-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmeter-grafana
  template:
    metadata:
      labels:
        app: jmeter-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            protocol: TCP
          volumeMounts:
          - name: grafanavol
            mountPath: /var/lib/grafana
      volumes:
      - name: grafanavol
        azureFile:
          secretName: azure-secret
          shareName: grafana
          readOnly: false
