jmeter/docker/jmeter_master_deploy.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ConfigMap
  data:
    load_test_run: |
      #!/bin/bash
      #Script created to invoke jmeter test script with the slave POD IP addresses
      #Script should be run like: ./load_test "path to the test script in jmx format"
      #This is from the configmap
      /jmeter/apache-jmeter-*/bin/jmeter -n -t $1 -Dserver.rmi.ssl.disable=true -R 'getent ahostsv4 jmeter-slaves-svc | cut -d' ' -f1 | sort -u | awk -v ORS=, '{print $1}' | sed 's/,$//''
  metadata:
      name: jmeter-load-test-script
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      jmeter_mode: master
    name: jmeter-master
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        jmeter_mode: master
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          jmeter_mode: master
      spec:
        containers:
        - args:
          - while true; do sleep 30; done;
          command:
          - /bin/bash
          - -c
          - --
          image: shadowpic/jmeter-master:latest
          imagePullPolicy: Always
          name: jmmaster
          ports:
          - containerPort: 60000
            protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: "8Gi"
            requests:
              cpu: ".5"
              memory: "500Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
          - name: load-test-run
            configMap:
              name: jmeter-load-test-script
kind: List
metadata: {}
