jmeter/docker/jmeter_influxdb_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jmeter-influxdb-svc
  labels:
    app: influxdb-jmeter
spec:
   type: ClusterIP
   ports:
    - port: 8083
      name: http
      targetPort: 8083
    - port: 8086
      name: api
      targetPort: 8086
    - port: 2003
      name: graphite
      targetPort: 2003
   selector:
    app: influxdb-jmeter
